@@ -1,0 +1,7 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    i18n_domain="ftw.contentstats">
+
+    <adapter factory=".types.PortalTypes" name="portal_types" />
+
+</configure>
