@@ -7,6 +7,7 @@
     <five:registerPackage package="." initialize=".initialize" />
 
     <include package=".browser" />
+    <include package=".collectors" />
 
     <genericsetup:registerProfile
         name="default"
